fix: [CI-2187]: fix scrollbar and test item alignment (#4471)

--- a/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionLandingPage.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionLandingPage/ExecutionLandingPage.module.scss
@@ -21,5 +21,8 @@
     flex: 1 0 auto;
     display: flex;
     flex-direction: column;
+    > [class*='BuildTests'] {
+      height: calc(100vh - 167px);
+    }
   }
 }
