--- a/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
+++ b/src/modules/70-pipeline/pages/execution/ExecutionTestView/BuildTests.module.scss
@@ -352,7 +352,7 @@
       justify-content: center;
       align-items: center;
       display: flex;
-
+      max-width: 910px;
       span {
         display: inline-block;
         padding-left: var(--spacing-xxsmall);
